--- a/package.json
+++ b/package.json
@@ -2,21 +2,27 @@
   "name": "w3",
   "version": "0.0.1",
   "description": "nodejs application",
-  "type": "module",
   "main": "server.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
+    "dotenv": "^14.3.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-jwt": "^4.0.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongodb": "^4.2.2",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "sequelize": "^6.14.1",
+    "simple-oauth2": "^4.3.0",
     "socket.io": "^4.4.0",
+    "sqlite": "^4.0.23",
+    "sqlite3": "^4.2.0",
     "video-stream": "^1.2.1"
   },
   "devDependencies": {
